<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Exercise Sample</string>
    <string name="measure_status">Status: %1$s</string>
    <string name="last_measured">Last measured:</string>
    <string name="starting_up">Starting up</string>
    <string name="exercise_not_available">Exercise not available on this device</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="new_exercise_confirmation">An exercise is running in another app. End it and start this one?</string>
    <string name="empty_time">00:00</string>
    <string name="empty_metric">—</string>
    <string name="preparing">Preparing exercise</string>
    <string name="gps_acquiring">GPS Acquiring</string>
    <string name="gps_acquired">GPS Acquired</string>
    <string name="gps_disabled">GPS Disabled on Device</string>
    <string name="gps_unavailable">GPS Unavailable</string>
</resources>
