<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:deviceIds="wear">

    <ImageView
        android:id="@+id/clock_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="@dimen/space_4dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/elapsed_time"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/elapsed_time"
        app:layout_constraintTop_toTopOf="@id/elapsed_time"
        app:srcCompat="@drawable/ic_clock"
        app:tint="?colorControlActivated" />

    <TextView
        android:id="@+id/elapsed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/empty_time"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintBottom_toTopOf="@id/heart_rate_text"
        app:layout_constraintLeft_toRightOf="@id/clock_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_v50pct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <ImageView
        android:id="@+id/heart_rate_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/heart_rate_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/heart_rate_text"
        app:srcCompat="@drawable/ic_heart_outline"
        app:tint="?colorControlActivated" />

    <TextView
        android:id="@+id/heart_rate_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4dp"
        android:layout_marginTop="@dimen/space_4dp"
        android:enabled="false"
        android:gravity="center_vertical"
        android:minHeight="32dp"
        android:text="@string/empty_metric"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBottom_toTopOf="@id/distance_text"
        app:layout_constraintLeft_toRightOf="@id/heart_rate_icon"
        app:layout_constraintRight_toLeftOf="@id/guide_v50pct"
        app:layout_constraintTop_toBottomOf="@id/elapsed_time"
        tools:enabled="true"
        tools:text="165" />

    <ImageView
        android:id="@+id/calories_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/calories_text"
        app:layout_constraintLeft_toRightOf="@id/guide_v50pct"
        app:layout_constraintTop_toBottomOf="@id/elapsed_time"
        app:layout_constraintTop_toTopOf="@id/calories_text"
        app:srcCompat="@drawable/ic_calories_burned"
        app:tint="?colorControlActivated" />

    <TextView
        android:id="@+id/calories_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4dp"
        android:layout_marginTop="@dimen/space_4dp"
        android:enabled="false"
        android:gravity="center_vertical"
        android:minHeight="32dp"
        android:text="@string/empty_metric"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintLeft_toRightOf="@id/calories_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elapsed_time"
        tools:enabled="true"
        tools:text="200" />

    <ImageView
        android:id="@+id/distance_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/distance_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/distance_text"
        app:srcCompat="@drawable/ic_distance"
        app:tint="?colorControlActivated" />

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4dp"
        android:enabled="false"
        android:gravity="center_vertical"
        android:minHeight="32dp"
        android:text="@string/empty_metric"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBottom_toTopOf="@id/start_end_button"
        app:layout_constraintLeft_toRightOf="@id/heart_rate_icon"
        app:layout_constraintRight_toLeftOf="@id/guide_v50pct"
        app:layout_constraintTop_toBottomOf="@id/heart_rate_text"
        tools:enabled="true"
        tools:text="1.1" />

    <ImageView
        android:id="@+id/laps_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/laps_text"
        app:layout_constraintLeft_toRightOf="@id/guide_v50pct"
        app:layout_constraintTop_toBottomOf="@id/elapsed_time"
        app:layout_constraintTop_toTopOf="@id/laps_text"
        app:srcCompat="@drawable/ic_lap"
        app:tint="?colorControlActivated" />

    <TextView
        android:id="@+id/laps_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4dp"
        android:enabled="false"
        android:gravity="center_vertical"
        android:minHeight="32dp"
        android:text="@string/empty_metric"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintLeft_toRightOf="@id/calories_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calories_text"
        tools:enabled="true"
        tools:text="2" />

    <Button
        android:id="@+id/start_end_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_2dp"
        android:padding="@dimen/space_4dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guide_v50pct" />

    <Button
        android:id="@+id/pause_resume_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_2dp"
        android:enabled="false"
        android:padding="@dimen/space_4dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guide_v50pct"
        app:layout_constraintRight_toRightOf="parent"
        tools:enabled="true" />
</androidx.constraintlayout.widget.ConstraintLayout>
